--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -16,6 +16,7 @@ h1 {
 .blue-bg {
   background-color: blue;
   overflow: auto;
+  height: 100%;
 }
 .danger-red {
   background-color: red !important!;
